# fastapi-beanie-jwt

./: .env  .gitignore  LICENSE  README.md  gen_salt.py  pyproject.toml  requirements.txt
myserver/: __init__.py  app.py  config.py  jwt.py  main.py
myserver/models/: __init__.py  auth.py  user.py
myserver/routes/: __init__.py  auth.py  mail.py  register.py  user.py
myserver/util/: __init__.py  current_user.py  mail.py  password.py
tests/: __init__.py  conftest.py  data.py  requirements.txt  util.py
tests/routes/: __init__.py  test_auth.py  test_user.py
